--- a/wide.css
+++ b/wide.css
@@ -23,7 +23,7 @@
     position: absolute;
     font-size: 1.25rem;
     left: -1.5rem;
-    top:.75rem;
+    top:-.25rem;
     color: #888;
     opacity: .4;
   }
